# CMakePractice

./: .gitignore  CMakeLists.txt  README.md
t1/: CMakeLists.txt  main.cpp  readme.md
t2/: CMakeLists.txt  readme.md
t2/doc/: hello.txt
t3/: CMakeLists.txt  readme.md
t3/lib/: CMakeLists.txt  hello.cpp  hello.h
t4/: CMakeLists.txt  readme.md
t4/src/: CMakeLists.txt  main.cpp
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.cpp
t6/: CMakeLists.txt
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt  main.cpp
